# texmacs-karlheg-git-svn

./: .gitignore  README.md  README.org  texmacs-gdb
src/: .dir-locals.el  .dir-locals.el.in  .emacs-local.el  .envrc  .gdbinit  .gitignore  CMakeLists.txt  Karls_org_for_TeXmacs.org  aclocal.m4  configure  configure.in  etags-regexps  make-tags  setup_build_env.sh  switch-guile-dev-to  texmacs  texmacs-gdb
src/TeXmacs/: .gitignore
src/TeXmacs/fonts/: font-characteristics.scm  font-database.scm  font-features.scm  font-substitutions.scm
src/TeXmacs/fonts/enc/: cork-cmacc.scm  cork-cmmi.scm  cork-cmsy.scm  cork-cmtacc.scm  cork-cmtt.scm  cork-pl.scm
src/TeXmacs/langs/encoding/: HTMLlat1.scm  HTMLspecial.scm  HTMLsymbol.scm  cork-escaped-to-ascii.scm  cork-to-real-ascii.scm  cork-unicode-oneway.scm  corktounicode.scm  symbol-unicode-fallback.scm  symbol-unicode-math.scm  symbol-unicode-oneway.scm  t2atounicode.scm  tmuniversaltounicode.scm  unicode-cork-oneway.scm  unicode-symbol-oneway.scm  utf8tolatex-back.scm  utf8tolatex-onedir.scm  utf8tolatex.scm
src/TeXmacs/progs/: init-buffer.scm  init-texmacs.scm  texmacs-core.scm  tm-mode.el
src/TeXmacs/progs/bibtex/: abbrv.scm  abstract.scm  acm.scm  alpha.scm  bib-complete.scm  bib-utils.scm  bib-widgets.scm  elsart-num.scm  ieeetr.scm  plain.scm  siam.scm  unsrt.scm
src/TeXmacs/progs/check/: check-master.scm
src/TeXmacs/progs/client/: client-base.scm  client-db-sync.scm  client-db.scm  client-live.scm  client-menu.scm  client-resource.scm  client-sync.scm  client-tmfs.scm  client-widgets.scm
src/TeXmacs/progs/compat/: guile-2.scm
src/TeXmacs/progs/database/: bib-db.scm  bib-kbd.scm  bib-manage.scm  bib-menu.scm  db-base.scm  db-convert.scm  db-edit.scm  db-format.scm  db-markup.scm  db-menu.scm  db-tmfs.scm  db-users.scm  db-version.scm  db-widgets.scm  title-markup.scm  title-transform.scm
src/TeXmacs/progs/debug/: debug-menu.scm  debug-widgets.scm
src/TeXmacs/progs/doc/: apidoc-collect.scm  apidoc-funcs.scm  apidoc-kbd.scm  apidoc-markup.scm  apidoc-menu.scm  apidoc-widgets.scm  apidoc.scm  docgrep.scm  help-funcs.scm  help-menu.scm  tmdoc-drd.scm  tmdoc-edit.scm  tmdoc-kbd.scm  tmdoc-markup.scm  tmdoc-menu.scm  tmdoc-search.scm  tmdoc.scm  tmweb.scm
src/TeXmacs/progs/dynamic/: animate-edit.scm  animate-menu.scm  calc-drd.scm  calc-edit.scm  calc-kbd.scm  calc-markup.scm  calc-menu.scm  calc-table.scm  dynamic-drd.scm  fold-edit.scm  fold-kbd.scm  fold-markup.scm  fold-menu.scm  program-doc.scm  program-drd.scm  program-edit.scm  program-menu.scm  scripts-drd.scm  scripts-edit.scm  scripts-kbd.scm  scripts-menu.scm  session-doc.scm  session-drd.scm  session-edit.scm  session-menu.scm
src/TeXmacs/progs/fonts/: font-new-widgets.scm  font-old-menu.scm  font-sample.scm  font-selector.scm  fonts-adobe.scm  fonts-composite.scm  fonts-ec.scm  fonts-foreign.scm  fonts-math.scm  fonts-misc.scm  fonts-truetype.scm  fonts-x.scm
src/TeXmacs/progs/generic/: document-doc.scm  document-edit.scm  document-menu.scm  document-part.scm  document-style.scm  document-widgets.scm  format-drd.scm  format-edit.scm  format-geometry-edit.scm  format-menu.scm  format-widgets.scm  generic-doc.scm  generic-edit.scm  generic-kbd.scm  generic-menu.scm  generic-widgets.scm  insert-menu.scm
src/TeXmacs/progs/graphics/: graphics-animate.scm  graphics-drd.scm  graphics-edit.scm  graphics-env.scm  graphics-group.scm  graphics-kbd.scm  graphics-main.scm  graphics-markup.scm  graphics-menu.scm  graphics-object.scm  graphics-single.scm  graphics-utils.scm
src/TeXmacs/progs/kernel/: boot-texmacs.scm
src/TeXmacs/progs/language/: minimal.scm  natural.scm  std-math.scm  std-symbols.scm
src/TeXmacs/progs/link/: link-edit.scm  link-extern.scm  link-extract.scm  link-kbd.scm  link-menu.scm  link-navigate.scm  locus-edit.scm
src/TeXmacs/progs/math/: format-math-menu.scm  math-drd.scm  math-edit.scm  math-kbd.scm  math-markup.scm  math-menu.scm  math-sem-edit.scm
src/TeXmacs/progs/part/: part-menu.scm  part-shared.scm  part-tmfs.scm
src/TeXmacs/progs/prog/: cpp-edit.scm  format-prog-menu.scm  glue-symbols.scm  prog-edit.scm  prog-kbd.scm  prog-menu.scm  python-edit.scm  scheme-autocomplete.scm  scheme-edit.scm  scheme-menu.scm  scheme-tools.scm
src/TeXmacs/progs/server/: server-base.scm  server-db-sync.scm  server-db.scm  server-live.scm  server-menu.scm  server-resource.scm  server-sync.scm  server-tmfs.scm
src/TeXmacs/progs/source/: macro-edit.scm  macro-search.scm  macro-widgets.scm  source-edit.scm  source-kbd.scm  source-menu.scm
src/TeXmacs/progs/table/: table-doc.scm  table-edit.scm  table-kbd.scm  table-menu.scm  table-widgets.scm
src/TeXmacs/progs/text/: format-text-edit.scm  format-text-kbd.scm  format-text-menu.scm  std-text-drd.scm  std-text-edit.scm  std-text-kbd.scm  std-text-natbib.scm  text-drd.scm  text-edit.scm  text-kbd.scm  text-menu.scm  text-natbib.scm  text-structure.scm  tm-structure.scm
src/TeXmacs/progs/version/: version-compare.scm  version-drd.scm  version-edit.scm  version-kbd.scm  version-menu.scm  version-svn.scm  version-tmfs.scm
src/cmake/: CompleteBundle.cmake.in  Doxygen.cmake  FindCairo.cmake  FindDoxygen.cmake  FindGuile.cmake  FindIconv.cmake  UseDoxygen.Doxyfile.in  UseDoxygen.cmake
src/misc/admin/: .gitignore
src/misc/doxygen/: Doxyfile.in
src/misc/m4/: qt.m4  qt5.m4  tm_gui.m4  tm_platform.m4  x11.m4
src/misc/man/: .gitignore
src/misc/scripts/: .gitignore  fig2ps.in  texmacs.in
src/plugins/asymptote/progs/: asymptote-menus.scm  init-asymptote.scm
src/plugins/axiom/progs/: axiom-input.scm  init-axiom.scm
src/plugins/axiom/src/: tm_axiom.c
src/plugins/caas/progs/: caas-edit.scm  caas-input.scm  init-caas.scm
src/plugins/cadabra/progs/: init-cadabra.scm
src/plugins/cocoa5/progs/: init-cocoa5.scm
src/plugins/coq/progs/: coq-edit.scm  coq-kbd.scm  init-coq.scm
src/plugins/dratex/progs/: init-dratex.scm
src/plugins/r/: Makefile
src/plugins/r/progs/: init-r.scm  (+2 more)
src/src/: .gitignore  CMakeLists.txt  makefile.in
src/src/System/: .gitignore  config.h.cmake  config.in
(+404 files in other folders)
